<resources>

    <string name="facebook_app_id">2466956650032413</string>
    <string name="fb_login_protocol_scheme">fb2466956650032413</string>
    <string name="app_name">LicentApp</string>
    <string name="title_activity_main">LicentApp</string>
    <string name="tab_text_1">Favourites</string>
    <string name="tab_text_2">Nearby</string>
    <string name="tab_text_3">Search</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="google_map_api_key">AIzaSyB1NuImZOBesZgM1jBlYO-q1x71WA2aoMA</string>
    <string name="service_mock_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum, mi a elementum lacinia, ex enim euismod massa, vel elementum est ante ut nisl. Donec rhoncus odio at eros fermentum hendrerit. Nam ac odio non mi porta faucibus. Class aptent.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>


    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="email_and_password">Email and password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="services_near">Services near</string>
    <string name="home">Home</string>
    <string name="home_card_description">Need an appointment for a service at your location?</string>
    <string name="away">Away</string>
    <string name="away_card_description">Need an appointment for a service at their location?</string>
    <string name="login_activity">Login Activity</string>
    <string name="price">Price:</string>
    <string name="duration">Duration:</string>
    <string name="pick_a_date_and_time">Pick a date and time!</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="add_a_note">Add a note</string>
    <string name="make_appointment">Make appointment!</string>
    <string name="get_an_appointment">Get an appointment!</string>
    <string name="write_your_notes_here">Write your notes here!</string>
    <string name="my_profile">My Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="home_providers">Home Providers</string>
    <string name="away_providers">Away Providers</string>
    <string name="actions">Actions</string>
    <string name="search">Search</string>
    <string name="log_out">Log out</string>
    <string name="ongoing_appointments">Ongoing appointments</string>
    <string name="appointments_awaiting_confirmation">Appointments awaiting confirmation</string>
    <string name="profile_name">Retea Cristian</string>
    <string name="settings">Settings</string>
    <string name="email">retea.cristian96@gmail.com</string>
</resources>
