<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:orientation="vertical"
    tools:context=".activities.MyProfileActivity">


    <RelativeLayout
        android:id="@+id/ProfileRelativeLayoutTopId"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">


        <RelativeLayout
            android:id="@+id/ProfileRelativeLayoutPictureId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_border">

            <ImageView
                android:id="@+id/ProfilePictureId"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/profile" />

        </RelativeLayout>

        <TextView
            android:id="@+id/ProfileNameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"
            android:text="@string/profile_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/ProfileMailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ProfileLinearLayoutTopId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ProfileRelativeLayoutTopId"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/ProfileRelativeLayoutMiddleId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:id="@+id/ProfileLinearLayoutMiddleId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/AppointmentsAwaitingConfirmationId"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/ongoing_appointments"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerViewOngoingAppointments"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/AppointmentsDone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/appointments_awaiting_confirmation"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerViewAwaitingAppointments"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

                <Button
                    android:padding="20dp"
                    android:id="@+id/GoToSettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/settings"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/ThemeOverlay.MyDarkButton"/>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>